--- a/hono-api/wrangler.jsonc
+++ b/hono-api/wrangler.jsonc
@@ -4,7 +4,7 @@
  */
 {
 	"$schema": "node_modules/wrangler/config-schema.json",
-	"name": "acf-ai-app-workshop",
+	"name": "cf-ai-app-workshop",
 	"main": "src/index.ts",
 	"compatibility_date": "2025-09-04",
 	"compatibility_flags": ["nodejs_compat"],
